--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -135,6 +135,7 @@
           <img class="logo" src="../img/logobn.jpg" alt="logo" />
         </section>
         <section class="redes boton">
+          <div></div>
           <li>
             <a href="https://www.facebook.com/pez154fashion" target="_blank"
               ><svg
