add api wsp-icon

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -123,6 +123,12 @@
           </div>
         </section>
       </div>
+      <a href="https://api.whatsapp.com/send?phone=543476537396"
+        ><img
+          class="wpp-icon"
+          src="https://res.cloudinary.com/dwpppqzr4/image/upload/v1697229436/Fletes%20Constitucion/whatsapp_sjuvva.png"
+          alt="imgwsp"
+      /></a>
     </main>
     <footer>
       <div class="footercont">
