--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 
   <body>
     <header>
-      <nav style="width: 80%">
+      <nav>
         <div class="navbar">
           <img class="logo" src="img/logobn.jpg" alt="logo" />
           <ul>
-            <li class="boton"><a class="boton" href="#">Inicio</a></li>
-            <li class="boton">
+            <li>
+              <a class="boton" href="#">Inicio</a>
+            </li>
+            <li>
               <a class="boton" href="pages/productos.html">Productos</a>
             </li>
-            <li class="boton">
+            <li>
               <a class="boton" href="pages/carrito.html">Carrito</a>
             </li>
           </ul>
@@ -52,10 +54,10 @@
           </div>
         </section>
       </div>
-      <a href="https://api.whatsapp.com/send?phone=543476537396"
+      <a href="https://api.whatsapp.com/send?phone=543476537396" target="_blank"
         ><img
-          class="wpp-icon"
           src="https://res.cloudinary.com/dwpppqzr4/image/upload/v1697229436/Fletes%20Constitucion/whatsapp_sjuvva.png"
+          class="wpp-icon"
           alt="imgwsp"
       /></a>
     </main>
@@ -69,7 +71,7 @@
         <section>
           <img class="logo" src="img/logobn.jpg" alt="logo" />
         </section>
-        <section class="redes boton">
+        <section class="redes">
           <li>
             <a href="https://www.facebook.com/pez154fashion" target="_blank"
               ><svg
@@ -82,6 +84,7 @@
                   d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
                 /></svg
             ></a>
+            <span style="margin-left: 10px">FACEBOOK</span>
           </li>
           <li>
             <a
@@ -96,6 +99,7 @@
                   d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z"
                 /></svg
             ></a>
+            <span style="margin-left: 10px">TIKTOK</span>
           </li>
         </section>
       </div>
