add nesting and improving code

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -51,7 +51,7 @@
                 <h3>MilkBox</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -71,7 +71,7 @@
                 <h3>Tazas</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -91,7 +91,7 @@
                 <h3>Laminas</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -111,7 +111,7 @@
                 <h3>MilkBox</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -136,7 +136,7 @@
                 <h3>MilkBox</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -156,7 +156,7 @@
                 <h3>agendas</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -176,7 +176,7 @@
                 <h3>MilkBox</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -196,92 +196,7 @@
                 <h3>MilkBox</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  height="20px"
-                  viewBox="0 -100 600 600"
-                >
-                  <path
-                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
-                  />
-                </svg>
-              </button>
-            </div>
-          </article>
-        </section>
-        <div class="title">
-          <h2>Topers</h2>
-        </div>
-        <section class="productos">
-          <article class="card">
-            <img src="../img/milkbox.png" alt="milkbox" />
-            <div class="card-info">
-              <div>
-                <h3>MilkBox</h3>
-                <p>1000$</p>
-              </div>
-              <button class="bt">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  height="20px"
-                  viewBox="0 -100 600 600"
-                >
-                  <path
-                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
-                  />
-                </svg>
-              </button>
-            </div>
-          </article>
-          <article class="card">
-            <img src="../img/milkbox.png" alt="milkbox" />
-            <div class="card-info">
-              <div>
-                <h3>MilkBox</h3>
-                <p>1000$</p>
-              </div>
-              <button class="bt">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  height="20px"
-                  viewBox="0 -100 600 600"
-                >
-                  <path
-                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
-                  />
-                </svg>
-              </button>
-            </div>
-          </article>
-          <article class="card">
-            <img src="../img/milkbox.png" alt="milkbox" />
-            <div class="card-info">
-              <div>
-                <h3>MilkBox</h3>
-                <p>1000$</p>
-              </div>
-              <button class="bt">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  height="20px"
-                  viewBox="0 -100 600 600"
-                >
-                  <path
-                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
-                  />
-                </svg>
-              </button>
-            </div>
-          </article>
-          <article class="card">
-            <img src="../img/milkbox.png" alt="milkbox" />
-            <div class="card-info">
-              <div>
-                <h3>MilkBox</h3>
-                <p>1000$</p>
-              </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -306,7 +221,7 @@
                 <h3>MilkBox</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -326,7 +241,7 @@
                 <h3>MilkBox</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -346,7 +261,7 @@
                 <h3>MilkBox</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
@@ -366,7 +281,92 @@
                 <h3>MilkBox</h3>
                 <p>1000$</p>
               </div>
-              <button class="bt">
+              <button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="20px"
+                  viewBox="0 -100 600 600"
+                >
+                  <path
+                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
+                  />
+                </svg>
+              </button>
+            </div>
+          </article>
+        </section>
+        <div class="title">
+          <h2>Topers</h2>
+        </div>
+        <section class="productos">
+          <article class="card">
+            <img src="../img/milkbox.png" alt="milkbox" />
+            <div class="card-info">
+              <div>
+                <h3>MilkBox</h3>
+                <p>1000$</p>
+              </div>
+              <button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="20px"
+                  viewBox="0 -100 600 600"
+                >
+                  <path
+                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
+                  />
+                </svg>
+              </button>
+            </div>
+          </article>
+          <article class="card">
+            <img src="../img/milkbox.png" alt="milkbox" />
+            <div class="card-info">
+              <div>
+                <h3>MilkBox</h3>
+                <p>1000$</p>
+              </div>
+              <button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="20px"
+                  viewBox="0 -100 600 600"
+                >
+                  <path
+                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
+                  />
+                </svg>
+              </button>
+            </div>
+          </article>
+          <article class="card">
+            <img src="../img/milkbox.png" alt="milkbox" />
+            <div class="card-info">
+              <div>
+                <h3>MilkBox</h3>
+                <p>1000$</p>
+              </div>
+              <button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="20px"
+                  viewBox="0 -100 600 600"
+                >
+                  <path
+                    d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
+                  />
+                </svg>
+              </button>
+            </div>
+          </article>
+          <article class="card">
+            <img src="../img/milkbox.png" alt="milkbox" />
+            <div class="card-info">
+              <div>
+                <h3>MilkBox</h3>
+                <p>1000$</p>
+              </div>
+              <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   height="20px"
