--- a/pages/productos.html
+++ b/pages/productos.html
@@ -45,7 +45,7 @@
       <div class="main-layout">
         <div class="containerFluid">
           <section class="categories">
-            <h2>Categorias</h2>
+            <h2 style="font-size: 20px">Categorias</h2>
             <input type="text" placeholder="Buscar un producto" />
             <ul>
               <li>
