--- a/pages/productos.html
+++ b/pages/productos.html
@@ -46,7 +46,7 @@
         <div class="containerFluid">
           <section class="categories">
             <h2 style="font-size: 20px">Categorias</h2>
-            <input type="text" placeholder="Buscar un producto" />
+            <input type="text" placeholder="Buscar un producto..." />
             <ul>
               <li>
                 <a href="#">categories1</a>
@@ -68,7 +68,7 @@
               </li>
             </ul>
           </section>
-          <section class="productos">
+          <section class="productos" id="productos">
             <article class="card">
               <img src="../img/milkbox.png" alt="milkbox" />
               <div class="card-info">
