--- a/pages/productos.html
+++ b/pages/productos.html
@@ -49,16 +49,16 @@
             <input type="text" placeholder="Buscar un producto..." />
             <ul>
               <li>
-                <a href="#">categories1</a>
+                <a href="#">Tarjetas</a>
               </li>
               <li>
-                <a href="#">categories2</a>
+                <a href="#">Lamina Comestible</a>
               </li>
               <li>
-                <a href="#">categories3</a>
+                <a href="#">Souvenir</a>
               </li>
               <li>
-                <a href="#">categories4</a>
+                <a href="#">Bolsas y Cajas</a>
               </li>
               <li>
                 <a href="#">categories5</a>
@@ -68,88 +68,7 @@
               </li>
             </ul>
           </section>
-          <section class="productos" id="productos">
-            <article class="card">
-              <img src="../img/milkbox.png" alt="milkbox" />
-              <div class="card-info">
-                <div>
-                  <h3>MilkBox</h3>
-                  <p>1000$</p>
-                </div>
-                <button>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="20px"
-                    viewBox="0 -100 600 600"
-                  >
-                    <path
-                      d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
-                    />
-                  </svg>
-                </button>
-              </div>
-            </article>
-            <article class="card">
-              <img src="../img/tazas.png" alt="milkbox" />
-              <div class="card-info">
-                <div>
-                  <h3>Tazas</h3>
-                  <p>1000$</p>
-                </div>
-                <button>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="20px"
-                    viewBox="0 -100 600 600"
-                  >
-                    <path
-                      d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
-                    />
-                  </svg>
-                </button>
-              </div>
-            </article>
-            <article class="card">
-              <img src="../img/laminaComestible.png" alt="milkbox" />
-              <div class="card-info">
-                <div>
-                  <h3>Laminas</h3>
-                  <p>1000$</p>
-                </div>
-                <button>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="20px"
-                    viewBox="0 -100 600 600"
-                  >
-                    <path
-                      d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
-                    />
-                  </svg>
-                </button>
-              </div>
-            </article>
-            <article class="card">
-              <img src="../img/invitacioncumple.png" alt="milkbox" />
-              <div class="card-info">
-                <div>
-                  <h3>MilkBox</h3>
-                  <p>1000$</p>
-                </div>
-                <button>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="20px"
-                    viewBox="0 -100 600 600"
-                  >
-                    <path
-                      d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"
-                    />
-                  </svg>
-                </button>
-              </div>
-            </article>
-          </section>
+          <section class="productos" id="productos"></section>
         </div>
       </div>
       <a href="https://api.whatsapp.com/send?phone=543476537396"
@@ -202,5 +121,6 @@
         </section>
       </div>
     </footer>
+    <script src="../js/productos.js"></script>
   </body>
 </html>
