--- a/pages/productos.html
+++ b/pages/productos.html
@@ -117,6 +117,7 @@
                 /></svg
             ></a>
             <span style="margin-left: 10px">TIKTOK</span>
+            <span style="margin-left: 10px">TIKTOK</span>
           </li>
         </section>
       </div>
